--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "3d-force-graph": "^1.73.3",
     "primeicons": "~6.0.1",
     "primeng": "~15.3.0",
-    "three": "^0.164.1"
+    "three": "^0.164.1",
+    "three-spritetext": "^1.8.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.2.10",
