--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "3d-force-graph": "^1.73.3",
+    "lil-gui": "^0.19.2",
     "primeicons": "~6.0.1",
     "primeng": "~15.3.0",
     "three": "^0.164.1",
@@ -64,7 +65,7 @@
     "protractor": "~7.0.0",
     "raw-loader": "^4.0.2",
     "rxjs": "~7.8.0",
-    "thingsboard": "https://github.com/thingsboard/thingsboard-pe-ui-types.git#release/3.6.2",
+    "thingsboard": "https://github.com/thingsboard/thingsboard-ui-types.git#release/3.6.3",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
     "typescript": "~4.9.5",
